--- a/deno.json
+++ b/deno.json
@@ -11,5 +11,8 @@
     "@std/assert": "jsr:@std/assert@^0.208.0",
     "@std/cli": "jsr:@std/cli@^0.208.0",
     "raylib": "./raylib/raylib.ts"
+  },
+  "compilerOptions": {
+    "types": ["./raylib/types.d.ts"]
   }
 }
