fixed math.round to math.floor

--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,7 @@
     "raylib": "./raylib/raylib.ts"
   },
   "compilerOptions": {
-    "types": ["./raylib/types.d.ts"]
+    "types": ["./raylib/types.d.ts"],
+    "global": ["./raylib/raylib.ts"]
   }
 }
